# Pathway-AI-Chatbot

./: .gitignore  LICENSE  README.md
plugin/: rag-chatbot.php  readme.txt
rag-backend/: .env.example  context.txt  main.py  pyproject.toml  rag.py
webapp/: index.html  package.json  page-ask-ai.php  vite.config.ts
webapp/src/: App.tsx  Widget.tsx  api.ts  embed-loader.js  main.tsx  styles.css
